--- a/package.json
+++ b/package.json
@@ -4,17 +4,29 @@
   "description": "",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build-ts",
+    "build-ts": "tsc",
+    "debug": "npm run build && npm run watch-debug",
+    "serve": "node dist/app.js",
+    "serve-debug": "nodemon --inspect dist/app.js",
+    "start": "npm run serve",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "concurrently -k \"npm run watch-ts\" \"npm run watch-node\"",
+    "watch-debug": "concurrently -k \"npm run watch-ts\" \"npm run serve-debug\"",
+    "watch-node": "nodemon dist/app.js",
+    "watch-ts": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-html-to-image": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.7",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
   }
