--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
   "name": "birthday-greeter",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "dist/server.js",
   "scripts": {
     "build": "npm run build-ts",
     "build-ts": "tsc",
     "debug": "npm run build && npm run watch-debug",
-    "serve": "node dist/app.js",
-    "serve-debug": "nodemon --inspect dist/app.js",
+    "serve": "node dist/server.js",
+    "serve-debug": "nodemon --inspect dist/server.js",
     "start": "npm run serve",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "concurrently -k \"npm run watch-ts\" \"npm run watch-node\"",
     "watch-debug": "concurrently -k \"npm run watch-ts\" \"npm run serve-debug\"",
-    "watch-node": "nodemon dist/app.js",
+    "watch-node": "nodemon dist/server.js",
     "watch-ts": "tsc -w"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "node-html-to-image": "^3.1.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.0",
+    "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.9",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7",
