Add connection to mongodb

--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "node-html-to-image": "^3.1.0"
+    "mongoose": "^5.11.11",
+    "node-html-to-image": "^3.1.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
