--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.11",
-    "node-html-to-image": "^3.1.0",
-    "winston": "^3.3.3"
+    "node-html-to-image": "^3.1.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
