--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "mongoose": "^5.11.11",
-    "node-html-to-image": "^3.1.0"
+    "node-html-to-image": "^3.1.0",
+    "normalize-text": "^2.3.1"
   },
   "devDependencies": {
     "@types/compression": "^1.7.0",
