--- a/package.json
+++ b/package.json
@@ -20,20 +20,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.11",
     "node-html-to-image": "^3.1.0",
+    "node-schedule": "^1.3.2",
     "normalize-text": "^2.3.1"
   },
   "devDependencies": {
+    "@types/async": "^3.2.5",
     "@types/compression": "^1.7.0",
     "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.9",
+    "@types/node-schedule": "^1.3.1",
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.7",
     "tslint": "^6.1.3",
